Added genmap to qSim

--- a/qSim/Makefile
+++ b/qSim/Makefile
@@ -4,5 +4,8 @@ all: $(SH).sh
 
 $(SH).sh: $(SH).org
 	bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh
+test: $(SH).sh
+	rm -r *.idx
+	bash $(SH).sh
 clean:
-	rm -rf $(SH).sh
+	rm -rf $(SH).sh *.idx *.out.txt *.fasta *.map
