--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 */*.idx
 */*.fasta
 */*.txt
+data/
 doc/date.txt
 doc/qDat.tex
 doc/qSim.tex
@@ -17,6 +18,7 @@ doc/sure.toc
 doc/version.txt
 doc/texput.log
 scripts/*.sh
+scripts/*.awk
 qDat/README.md
 qDat/chr21.cm
 qDat/chr21.dat
@@ -29,4 +31,5 @@ qDat/hs.fna
 qDat/hs.gff
 qDat/ncbi_dataset.zip
 qDat/ncbi_dataset/
+qsDat/sortSeq.sh
 qDat/test/
