Edited whole document

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-*/*.sh
-*/*.idx
 */*.fasta
+*/*.idx
+*/*.sh
 */*.txt
 data/
 doc/date.txt
@@ -16,10 +16,8 @@ doc/sure.log
 doc/sure.pdf
 doc/sure.ps
 doc/sure.toc
-doc/version.txt
 doc/texput.log
-scripts/*.sh
-scripts/*.awk
+doc/version.txt
 qDat/README.md
 qDat/chr21.cm
 qDat/chr21.dat
@@ -32,13 +30,19 @@ qDat/hs.fna
 qDat/hs.gff
 qDat/ncbi_dataset.zip
 qDat/ncbi_dataset/
-qsDat/sortSeq.sh
 qDat/test/
 qsDat/*.zip
+qsDat/README.md
 qsDat/all*
 qsDat/fur.db
+qsDat/hs.fna
+qsDat/hs.gff
+qsDat/ncbi_dataset/
 qsDat/ndata*
 qsDat/neidb*
 qsDat/neighbors
+qsDat/sortSeq.sh
 qsDat/targets
 qsDat/tdata
+scripts/*.awk
+scripts/*.sh
