Edited for submission of funreg ms
- Changed title of Chapter 3 to also refer to targets & neighbors
- Edited Introduction
- Typeset space between number, n, and unit, U, as n\,U
- Checked shell scripts

--- a/qDat/Makefile
+++ b/qDat/Makefile
@@ -4,5 +4,8 @@ all: $(SH).sh
 
 $(SH).sh: $(SH).org
 	bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh
+test: $(SH).sh
+	rm -rf *.idx ncbi_dataset* README.md md5sum.txt
+	bash $(SH).sh
 clean:
 	rm -rf $(SH).sh
