--- a/qsSim/Makefile
+++ b/qsSim/Makefile
@@ -1,15 +1,12 @@
 SH = qsSim
 
-all: $(SH).sh cut.awk sortSeq.sh
+all: $(SH).sh cut.awk
 
 $(SH).sh: $(SH).org
 	bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh
 cut.awk: $(SH).org
 	bash ../scripts/org2nw $(SH).org | notangle -Rcut.awk > cut.awk
-sortSeq.sh: $(SH).org
-	bash ../scripts/org2nw $(SH).org | notangle -RsortSeq.sh > sortSeq.sh
-test: $(SH).sh cut.awk
-	rm -rf qs.db queries subjects
+test: clean $(SH).sh cut.awk
 	bash $(SH).sh
 clean:
-	rm -rf $(SH).sh
+	rm -rf $(SH).sh targets neighbors fur.db
