--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,14 @@ qDat/hs.gff
 qDat/ncbi_dataset.zip
 qDat/ncbi_dataset/
 qDat/test/
+qDat/u.blast
+qDat/u.tex
+qDat/wrapU.aux
+qDat/wrapU.dvi
+qDat/wrapU.log
+qDat/wrapU.pdf
+qDat/wrapU.ps
+qDat/wrapU.tex
 qsDat/*.zip
 qsDat/README.md
 qsDat/all*
