--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 */*.txt
 data/
 doc/date.txt
+doc/fp.tex
 doc/qDat.tex
 doc/qSim.tex
 doc/qsDat.tex
@@ -17,6 +18,7 @@ doc/sure.ps
 doc/sure.toc
 doc/texput.log
 doc/version.txt
+qDat/*.blast
 qDat/README.md
 qDat/chr21.cm
 qDat/chr21.dat
@@ -24,7 +26,8 @@ qDat/chr21.fna
 qDat/chr21.map
 qDat/chr21_gm.dat
 qDat/chr21r.fna
-qDat/chr22.fna
+qDat/chr21.n*
+qDat/chr21_1.map
 qDat/hs.fna
 qDat/hs.gff
 qDat/ncbi_dataset.zip
