Major revision to prepare for resubmission

--- a/qDat/Makefile
+++ b/qDat/Makefile
@@ -1,9 +1,12 @@
+nw = $(shell which noweb)
 SH = qDat
 
 all: $(SH).sh
 
 $(SH).sh: $(SH).org
-	bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh
+	if [ "$(nw)" != "" ]; then\
+		bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh;\
+	fi
 test: $(SH).sh
 	rm -rf *.idx ncbi_dataset* README.md md5sum.txt
 	bash $(SH).sh
