--- a/qSim/Makefile
+++ b/qSim/Makefile
@@ -1,9 +1,12 @@
+nw = $(shell which noweb)
 SH = qSim
 
 all: $(SH).sh
 
 $(SH).sh: $(SH).org
-	bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh
+	if [ "$(nw)" != "" ]; then\
+		bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh;\
+	fi
 test: $(SH).sh
 	rm -r *.idx
 	bash $(SH).sh
