--- a/qsSim/Makefile
+++ b/qsSim/Makefile
@@ -1,11 +1,16 @@
+nw = $(shell which noweb)
 SH = qsSim
 
 all: $(SH).sh cut.awk
 
 $(SH).sh: $(SH).org
-	bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh
+	if [ "$(nw)" != "" ]; then\
+		bash ../scripts/org2nw $(SH).org | notangle -R$(SH).sh > $(SH).sh;\
+	fi
 cut.awk: $(SH).org
-	bash ../scripts/org2nw $(SH).org | notangle -Rcut.awk > cut.awk
+	if [ "$(nw)" != "" ]; then\
+		bash ../scripts/org2nw $(SH).org | notangle -Rcut.awk > cut.awk;\
+	fi
 test: clean $(SH).sh cut.awk
 	bash $(SH).sh
 clean:
